page new step 6

--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -211,6 +211,12 @@
 
         line-height: (24 / 11);
       }
+
+      strong {
+        padding: 0 2px;
+        background-color: $color-inver-text-bg;
+        color: $color-white;
+      }
     }
 
     ul {
