--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -41,6 +41,7 @@ block content
         +link(href="search-result.html") SpacePool - Search result (search-result.html)
         +link(href="reservations.html") SpacePool - My reservations (reservations.html)
         +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
+        +link(href="new-space-step8.html") SpacePool - HOST My rental offers New Space Step 6 (New step Terms and Conditions) (new-space-step8.html)
 
       +page-title._small Попапы
       +e.list
