--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -141,6 +141,7 @@ $color-gray-light-2: #e6eaf0;
 $color-border-gray: #444c59;
 $color-scrollbar-bg: #f4f4f4;
 $color-yellow-light: #fff7c8;
+$color-inver-text-bg: #1b262d;
 
 // ##########
 // Transitions
