--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -20,6 +20,7 @@
 
     @include screen('sm') {
       padding-left: 15px;
+
       @include text15;
     }
   }
@@ -45,9 +46,7 @@
     }
   }
 
-
   &__button {
-
     &_wide {
       min-width: 298px;
 
@@ -113,10 +112,10 @@
     flex-wrap: wrap;
 
     #{$b} {
-
       &__button {
         @include screen('sm') {
           width: 100%;
+          margin-bottom: 10px;
         }
       }
     }
