--- a/app/pages/new-space/new-space-step4.pug
+++ b/app/pages/new-space/new-space-step4.pug
@@ -30,16 +30,21 @@ block content
               +page-info-title._mg62 Photos
               +page-info-description Step 4 <i>of 7</i>
         +content-column-main._no-ptop
-          +form()._white._flex(data-validated-form)
+          +form()._white._flex._pb2.js-form-with-hidden-panel(data-validated-form)
             +e.container_pds
               +form-section._mg65
                 +form-section-header._mg26._fx-sb
                   +form-section-title Space photos
                   +form-section-text._bold._fz18._dark(data-file-counter) 0 / 25
                 +uploader-output.is-empty
-            +form-panel.__panel_border
-              +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
-              +button-icon('button', 'select-arrow')(type="submit" disabled).__button_wide Next
+            +e.panel_fixed._fixed_visible(data-hidden-panel)
+              .container
+                +grid.grid_big.grid_notop
+                  +col({ xl: 3, md: 12 })
+                  +col({ xl: 9, md: 12 })
+                    +form-panel.__panel_border
+                      +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
+                      +button-icon('button', 'select-arrow')(type="submit" disabled).__button_wide Next
 
 
 block panels
