--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -855,6 +855,9 @@ block content
       +ui-section-content()
         +ui-description .map._big#mapTwo
         +map()._big#mapTwo
+      +ui-section-content()
+        +ui-description .map#googleMap
+        +map#googleMap
 
     //- Анимации
     +ui-section
