--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -26,4 +26,5 @@ html(lang='en')
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
+    //- script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCKtbucQSqDWV-9lNCgzESqbdUakhraXDY&callback=initMap')
     script(src='assets/scripts/map.js')
