updates: fix focus for numberinput, change password verify, add search to selectbox, add decreasing counter for textareas with maxlength

--- a/app/blocks/form-box/form-box.pug
+++ b/app/blocks/form-box/form-box.pug
@@ -11,7 +11,7 @@ mixin form-box(label, icon, tag, symbol, symbol2, symbol3)
     if symbol2
       +e.icon_text._text_r0!=symbol2
     if symbol3
-      +e.icon_text._text_small!= symbol3
+      +e.icon_text._text_small(data-symbol-counter)!= symbol3
 
 
 mixin form-box-removable(label, tag, nopoint)
