--- a/app/pages/new-space/new-space-step2.pug
+++ b/app/pages/new-space/new-space-step2.pug
@@ -37,11 +37,11 @@ block content
                   +col({ xl: 12 })
                     +form-section-wrapper
                       +form-box('Space Name', '', '', '', '', '50')
-                        +textarea(type="text" name="spaceName" placeholder="Space Name" rows="1" required maxlength="50")
+                        +textarea(type="text" name="spaceName" placeholder="Space Name" rows="1" required maxlength="50").js-textarea-counter
                   +col({ xl: 12 })
                     +form-section-wrapper
                       +form-box('Space description', '', '', '', '', '400')
-                        +textarea(type="text" name="spaceDescription" placeholder="Space description" rows="1" required maxlength="400")
+                        +textarea(type="text" name="spaceDescription" placeholder="Space description" rows="1" required maxlength="400").js-textarea-counter
               +form-section._mta
                 +grid.grid_big.grid_t55
                   +col({ xl: 7, lg: 8, md: 12 })
