--- a/app/pages/new-space/new-space-step5.pug
+++ b/app/pages/new-space/new-space-step5.pug
@@ -76,7 +76,7 @@ block content
               +form-section._mid-mg
                 +form-section-wrapper
                   +form-box('Basic space rules (optional)', '', '', '', '', '400')
-                    +textarea(type="text" name="basicRules" placeholder="Basic space rules (optional)" rows="1" required maxlength="400")
+                    +textarea(type="text" name="basicRules" placeholder="Basic space rules (optional)" rows="1" required maxlength="400").js-textarea-counter
               +form-section
                 +e.row
                   +e.column_rules
