--- a/app/pages/signup/signup.pug
+++ b/app/pages/signup/signup.pug
@@ -101,7 +101,7 @@ block content
                   +form-section-wrapper
                     +form-box('Password')
                       +input(type="password" name="password" placeholder="Password"
-                      data-parsley-equalto="[data-password2]" data-password1="password1" required="required")
+                      data-parsley-passwordequalto="[data-password2]" data-password1="password1" required="required")
                 +col({xl: 6, md:12 }).grid__col_md-order2
                   +form-section-wrapper
                     +checkbox('subscribe', '1')._border Sign me up to Space Pool notification via E-mail
@@ -109,7 +109,7 @@ block content
                   +form-section-wrapper
                     +form-box('Password one more time')
                       +input(type="password" name="password" placeholder="Password one more time" data-password2="password2"
-                      data-parsley-equalto="[data-password1]" required="required")
+                      data-parsley-passwordequalto="[data-password1]" required="required")
                 +col({xl: 6, md:12 }).grid__col_md-order2
                   +form-section-wrapper
                     +button('button')(type="submit")._wide._short Create my Space Pool account
