--- a/app/components/popup-password-change/popup-password-change.pug
+++ b/app/components/popup-password-change/popup-password-change.pug
@@ -11,10 +11,10 @@ mixin popup-password-change()
           +form-section-wrapper
             +form-box('New password')
               +input(type="password" name="newPassword"
-              data-parsley-equalto="[data-password2]" data-password1="password1")
+              data-parsley-passwordequalto="[data-password2]" data-password1="password1")
         +col({xl:12 })
           +form-section-wrapper
             +form-box('New password one more time')
-              +input(type="password" name="newPasswordConfirm" data-parsley-equalto="[data-password1]" data-password2="password2")
+              +input(type="password" name="newPasswordConfirm" data-parsley-passwordequalto="[data-password1]" data-password2="password2")
       +e.buttons._mgt60
         +button('button')(type="submit")._short._wide Save changes
