--- a/app/blocks/state/state.scss
+++ b/app/blocks/state/state.scss
@@ -20,6 +20,11 @@
     top: 50%;
     left: 0;
     transform: translate3d(0, -50%, 0);
+
+    @include screen('sm') {
+      width: 7px;
+      height: 7px;
+    }
   }
 
   .link {
@@ -27,6 +32,17 @@
       display: inline-block;
       box-sizing: border-box;
       line-height: 1;
+    }
+  }
+
+  &_empty {
+    width: 10px;
+    height: 10px;
+    padding: 0;
+
+    @include screen('sm') {
+      width: 7px;
+      height: 7px;
     }
   }
 
