--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -52,6 +52,7 @@ include ../blocks/indicator/indicator
 include ../blocks/info-price/info-price
 include ../blocks/info-slide/info-slide
 include ../blocks/info/info
+include ../blocks/informer/informer
 include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
@@ -93,6 +94,7 @@ include ../blocks/request/request
 include ../blocks/scroll-form/scroll-form
 include ../blocks/section/section
 include ../blocks/selectable-block/selectable-block
+include ../blocks/short-info/short-info
 include ../blocks/short-profile/short-profile
 include ../blocks/sidebar/sidebar
 include ../blocks/sign-input/sign-input
