--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -142,6 +142,9 @@ $color-border-gray: #444c59;
 $color-scrollbar-bg: #f4f4f4;
 $color-yellow-light: #fff7c8;
 $color-inver-text-bg: #1b262d;
+$color-peach: #d67659;
+$color-confirm: #249d79;
+$color-green-check: #75cda5;
 
 // ##########
 // Transitions
