--- a/app/blocks/notification/notification.scss
+++ b/app/blocks/notification/notification.scss
@@ -5,14 +5,32 @@
   width: 100%;
   background-color: $color-white;
   color: $color-basic;
-  padding: 23px 25px 34px 22px;
   overflow: hidden;
   box-sizing: border-box;
+  max-width: 577px;
 
-  &__about {
+  &__head {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 23px 23px 10px;
+  }
+
+  &__content {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 16px 23px 27px;
+  }
+
+  &__footer {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    border-top: 1px solid $color-gray-light-2;
+    padding: 27px 23px 37px;
   }
 
   &__name {
@@ -20,14 +38,14 @@
 
     font-weight: 400;
     line-height: (20 / 20);
-
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
   }
 
   &__target {
     display: inline-block;
+
+    &:not(:first-child) {
+      margin-left: 20px;
+    }
   }
 
   &__title {
@@ -42,7 +60,7 @@
 
   &__timer {
     &:not(:first-child) {
-      margin-top: 15px;
+      margin-top: 14px;
     }
   }
 
@@ -50,28 +68,22 @@
     position: relative;
     display: flex;
     width: 100%;
-    padding-top: 18px;
     box-sizing: border-box;
+    margin-top: -11px;
 
-    &::before {
-      @include pseudo;
-
-      width: calc(100% + 50px);
-      height: 1px;
-      top: 0;
-      left: 50%;
-      transform: translate3d(-50%, 0, 0);
-      background-color: $color-gray-light-2;
-    }
-
-    &:not(:first-child) {
-      margin-top: 27px;
+    @include screen('sm') {
+      flex-wrap: wrap;
     }
   }
 
   &__button {
     flex: 1;
-    margin-top: 10px;
+    margin-top: 11px;
+
+    @include screen('sm') {
+      flex: none;
+      width: 100%;
+    }
 
     &:not(:last-child) {
       margin-right: 28px;
